--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "aiogram",
     "asyncio>=3.4.3",
     "dotenv==0.9.9",
+    "emoji==2.14.1",
     "logging==0.4.9.6",
     "playwright==1.52.0",
 ]
